--- a/views/public/index.html
+++ b/views/public/index.html
@@ -40,7 +40,7 @@
 
 
 	<div id="loader">
-		 <div class="loader-text">Please wait a moment... we are crunching the data!</div>
+		 <div class="loader-text">Veuillez patienter un moment, on prepare les donnees</br>Ceci peut prendre jusqu'a 2 minutes (si vous utilisez Chrome vous pouvez continuer a utiliser vos autres onglets)</div>
 	</div>
 </body>
 
